include/picsim.h

  /**
   * @brief PICsim pin structure
   *
   * Internal structure used to describe one pin.
   */
  typedef struct
  {
    unsigned char ptype;   ///< @ref pintype
    unsigned char dir;     ///< @ref pindir
    unsigned char value;   ///< value
    unsigned char lvalue;  ///< latch value
    char pord;             ///< pin port number
    unsigned char *port;   ///< port address
    float avalue;          ///< analog input value
    unsigned char ovalue;  ///< defaut open pin value
    float oavalue;         ///< analog output value
    unsigned char lsvalue; ///< last set value (used by open collector simulation)
  } picpin;
  /**
   * @brief PICsim pin structure
   *
   * Internal structure used to describe one pin.
   */
  typedef struct
  {
    unsigned char pin;    ///< pin
    unsigned char ovalue; ///< old value
    unsigned char cap_ps; ///< capture pre scaler
  } ccp_t;
  /**
   * @brief PICsim serial structure
   *
   * Internal structure used to describe one serial connection.
   */
  typedef struct
  {
    // USART
    unsigned char recb;
    int serialc;
    unsigned char txtemp[2];
    char txtc;
    unsigned char RCREG2;
    // serial emulation
    char SERIALDEVICE[100];
    unsigned int serialbaud; // serial baud emulated
    float serialexbaud;      // exac serial baud
#ifdef _WIN_
    HANDLE serialfd;
#else
    int serialfd;
#endif
    int s_open;
    int flowcontrol;
    int ctspin;
    int rtspin;
    unsigned char buff[BUFFMAX];
    int bc;
    unsigned char *serial_TXSTA;
    unsigned char *serial_PIR;
    unsigned char *serial_PIE;
    unsigned char RXIF_mask;
    unsigned char TXIF_mask;
    unsigned char *serial_RCSTA;
    unsigned char *serial_SPBRG;
    unsigned char *serial_SPBRGH;
    unsigned char *serial_BAUDCTL;
    unsigned char *serial_RCREG;
    unsigned char *serial_TXREG;
    unsigned short serial_TXREG_ADDR;
    unsigned short serial_RCSTA_ADDR;
    unsigned short serial_RCREG_ADDR;
    unsigned char *serial_TRIS_RX;
    unsigned char serial_TRIS_RX_MASK;
    bb_uart_t bbuart;
  } _serial;
  /**
   @brief PICsim PIC structure

  Structure used to describe pic microcontroller .
   */
  typedef struct _pic _pic;
  struct _pic
  {
    unsigned char print; ///< print information ON/OFF
    unsigned int RAMSIZE;
    unsigned int ROMSIZE;
    unsigned int EEPROMSIZE;
    unsigned int IDSIZE;
    unsigned int CONFIGSIZE;
    unsigned char STACKSIZE;
    unsigned char PINCOUNT;
    unsigned char CCPCOUNT;
    unsigned char ADCCOUNT;
    unsigned char USARTCOUNT;
    unsigned char WDT_MS;
    unsigned char family;   ///< @ref family
    unsigned int processor; ///< @ref procid
    unsigned short debugv[8];
    unsigned char *ram;
    unsigned short *prog;
    unsigned short *id;
    unsigned char *eeprom;
    unsigned short *config;
    unsigned int pc;
    unsigned int jpc;
    unsigned short lram; ///< loaded register
    unsigned short rram; ///< readed register
    unsigned int *stack;
    unsigned char w;
    unsigned char wdt;
    unsigned char s2;
    unsigned long long cycles;
    float freq;          ///< frequency
    unsigned char sleep; ///< sleep mode on
    unsigned char pkg;   ///<  @ref packaging
    picpin *pins;
    unsigned char mclr;
    ccp_t *ccp;
    unsigned char *adc;
    unsigned char *usart_rx;
    unsigned char *usart_tx;
    unsigned char pgc;
    unsigned char pgd;
    unsigned char sck;
    unsigned char sdo;
    unsigned char sdi;
    unsigned char t0cki;
    unsigned char t1cki;
    unsigned char intlv;
    // on chip debbuger
    unsigned char ocd_pgca;
    unsigned char ocd_pgc;
    // periferic
    unsigned char debug;
    unsigned char sstep;
    unsigned char dbg;
    unsigned char frst;
    // timers
    int cp0;
    int cp1;
    int cp2;
    int cp2_;
    int cp3;
    int t2pr;
    // timer input
    unsigned char t0cki_;
    unsigned char t1cki_;
    // interrupt
    unsigned char int0;
    unsigned char int1;
    unsigned char int2;
    // pin value
    unsigned char int0v;
    unsigned char int1v;
    unsigned char int2v;
    // portb int mismatch
    unsigned char portbm;
    // adc
    float vcc; ///< Microcontroller VCC used by ADC
    int adcstep;
    unsigned char adcon1;
    // wdt
    float twdt;
    // eeprom
    int ee_wr;
    // ports
    unsigned char p16latch[5];
    unsigned char porta;
    unsigned char portb;
    unsigned char portc;
    unsigned char portd;
    unsigned char porte;
    unsigned char portf;
    unsigned char portg;
    unsigned char trisa;
    unsigned char trisb;
    unsigned char trisc;
    unsigned char trisd;
    unsigned char trise;
    unsigned char trisf;
    unsigned char trisg;
    unsigned char ioupdated;
    // MSSP
    unsigned char ssp_ck;
    unsigned char ssp_sck;
    unsigned char ssp_scka;
    unsigned char sspsr;
    unsigned char ssp_bit;

    _serial serial[SERIAL_MAX];

    void (*reset)(_pic *pic);
    void (*mmap)(_pic *pic);
    int (*getconf)(_pic *pic, unsigned int);
    void (*disable_debug)(_pic *pic);
    void (*periferic)(_pic *pic);
    int (*interrupt)(_pic *pic);
    void (*stop)(_pic *pic);

    union
    {
      P16map_t P16map;
      P16Emap_t P16Emap;
      P18map_t P18map;
    };
  };
  /**
   * @brief Read HEX file to P16E microcontroller
   *
   * @param fname name of .hex file
   * @param leeprom flag to load or not the microcontroller data eeprom form file
   * @return @ref hexload
   */
  int read_ihx_16e(_pic *pic_, const char *fname, int leeprom);
  /**
   * @brief Read HEX file to P18 microcontroller
   *
   * @param fname name of .hex file
   * @param leeprom flag to load or not the microcontroller data eeprom form file
   * @return @ref hexload
   */
  int read_ihx_18(_pic *pic_, const char *fname, int leeprom);
  /**
   * @brief Dump all non volatile P16 microcontroller memory to HEX file
   *
   * @param fname name of .hex file
   * @return @ref hexload
   */
  int write_ihx(_pic *pic_, const char *fname);
  /**
   * @brief Dump all non volatile P16E microcontroller memory to HEX file
   *
   * @param fname name of .hex file
   * @return @ref hexload
   */
  int write_ihx16e(_pic *pic_, const char *fname);
  /**
   * @brief Dump all non volatile P18 microcontroller memory to HEX file
   *
   * @param fname name of .hex file
   * @return @ref hexload
   */
  int write_ihx18(_pic *pic_, const char *fname);
  /**
   * @brief Return list name of supported processors
   *
   * @param variable to return the number of supported processors
   * @return array of names
   */
  int getproclist(char list[][30], int size);
  /**
   * @brief Return processor ID by name
   *
   * @param str name of microcontoller
   * @return ID of microcontroller
   */
  unsigned int getprocbyname(const char *str);
  /**
   * @brief Return processor family ID by name
   *
   * @param str name of microcontoller
   * @return family ID of microcontroller
   */
  unsigned int getfprocbyname(const char *str);
  /**
   * @brief Return processor family ID by ID
   *
   * @param proc ID of microcontoller
   * @return family ID of microcontroller
   */
  unsigned int getfprocbynumber(int proc);
  /**
   * @brief Return processor name by ID
   *
   * @param proc ID of microcontoller
   * @param str string to return the name of microcontroller
   * @return filled str parameter
   */
  char *getnamebyproc(int proc, char *str);
  /**
   * @brief Return P16 FSR name by address
   *
   * @param addr address of FSR
   * @return FSR name
   */
  const char *getFSRname_16(unsigned int addr);
  /**
   * @brief Return P16E FSR name by address
   *
   * @param addr address of FSR
   * @return FSR name
   */
  const char *getFSRname_16E(unsigned int addr);
  /**
   * @brief Return P16E2 FSR name by address
   *
   * @param addr address of FSR
   * @return FSR name
   */
  const char *getFSRname_16E2(unsigned int addr);
  /**
   * @brief Return P18 FSR name by address
   *
   * @param addr address of FSR
   * @return FSR name
   */
  const char *getFSRname_18(unsigned int addr);
  /**
   * @brief Return pin name
   *
   * @param pic_ pointer to pic object
   * @param pin pin number
   * @param str string to return the name of pin
   * @return filled str parameter
   */
  const char *getPinName(_pic *pic, int pin, char *pname);
  typedef struct
  {
    unsigned short ID;
    char name[30];
    unsigned char family;
    void (*start)(_pic *pic);
  } pic_desc;
  extern pic_desc PICS[PMAX];
  extern int PIC_count;
  void pic_register(pic_desc picd);