pytest/cpicsim.pxd


    int read_ihx_16e(_pic* pic_, const char* fname, int leeprom)

    int read_ihx_18(_pic* pic_, const char* fname, int leeprom)

    int write_ihx(_pic* pic_, const char* fname)

    int write_ihx16e(_pic* pic_, const char* fname)

    int write_ihx18(_pic* pic_, const char* fname)

    int getproclist(char list[][30], int size)

    unsigned int getprocbyname(const char* str)

    unsigned int getfprocbyname(const char* str)

    unsigned int getfprocbynumber(int proc)

    char* getnamebyproc(int proc, char* str)

    const char* getFSRname_16(unsigned int addr)

    const char* getFSRname_16E(unsigned int addr)

    const char* getFSRname_16E2(unsigned int addr)

    const char* getFSRname_18(unsigned int addr)

    const char* getPinName(_pic* pic, int pin, char* pname)

    ctypedef void (*_pic_desc_pic_desc_start_ft)(_pic* pic)

    ctypedef struct pic_desc:
        unsigned short ID
        char name[30]
        unsigned char family
        _pic_desc_pic_desc_start_ft start

    pic_desc PICS[25]

    int PIC_count

    void pic_register(pic_desc picd)
